@@ -1,3 +1,9 @@
+2012-09-09  Paul Smith  <psmith@gnu.org>
+
+	* read.c (eval): If we detect an initial UTF-8 BOM, skip it.
+	Fixes Savannah bug #36529.
+	(record_target_var): Remove unused variable "fname".
+
 2012-09-09  Eli Zaretskii  <eliz@gnu.org>
 
 	* read.c (unescape_char): Fix a thinko in the last change.
